    TYPE-ERROR-DATUM.  (reported by Tony Martinez)
  * fixed bug #340: SETF of VALUES obeys the specification in ANSI
    5.1.2.3 for multiple-value place subforms.  (reported by Kalle
    Olavi Niemetalo)
  * fixed bug #334: programmatic addition of slots using specialized
    methods on SB-MOP:COMPUTE-SLOTS works for :ALLOCATION :INSTANCE
    and :ALLOCATION :CLASS slots.
  * fixed a bug: #\Space (and other whitespace characters) are no
    longer considered to be macro characters in standard syntax by
    GET-MACRO-CHARACTER.
  * fixed bug: initialization of condition class metaobjects no longer
    causes an instance of the condition to be created.  (reported by
    Marco Baringer)
  * fixed bug: it is now possible to have slots such that
    SB-MOP:SLOT-DEFINITION-ALLOCATION of the effective slot
    description is neither :INSTANCE nor :CLASS.
  * fixed bug: the ctor optimization of MAKE-INSTANCE now respects
    user-defined methods on SLOT-BOUNDP-USING-CLASS and (SETF
    SLOT-VALUE-USING-CLASS), and no longer causes errors with
    non-standard SLOT-DEFINITION-ALLOCATION values.

changes in sbcl-0.8.12 relative to sbcl-0.8.11:
  * minor incompatible change: the system no longer provides
    optimization hints (conditions which are TYPEP
    SB-EXT:COMPILER-NOTE) for conforming code in default compilation
    mode; these hints are still emitted when higher SPEED optimization
    is requested.
  * new contrib module: a sampling profiler (profiling by statistical
    sampling, rather than by instrumenting functions) is available as
    the SB-SPROF contrib.  (thanks to Gerd Moellmann and Juho Snellman)
  * the behaviour of the standard function ED is now customizeable by
    third parties through a hook variable: see ED's documentation
    string for information on the protocol.
  * the compiler no longer emits efficiency notes for (FUNCALL X)
    when the type of X is uncertain under default optimization
    settings.